refactor: simplify service logic, improve dependency management, and clean up imports